deploy/llmd-eks/route-direct.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ms-route-direct
  namespace: llm-d
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: infra-inference-gateway
      namespace: llm-d
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: ms-decode-direct
          port: 8000
          weight: 1
